@@ -1,3 +1,7 @@
+2013-05-16  Tom Hacohen
+
+        * Edje textblock: Fixed issue with quoted formats.
+
 2013-05-14  Jihoon Kim
 
         * Edje entry: return surrounding string until the start position of selection
